--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -1,4 +1,5 @@
 <h1>{{ question.question_text }}</h1>
+<h2>{{ question.question_assigned }}</h2>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
